--- a/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_frame.xml
+++ b/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_frame.xml
@@ -5,53 +5,63 @@
         android:id="@+id/button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1" />
+        android:text="@string/_1"
+        android:textSize="@dimen/button_text"/>
     <Button
         android:id="@+id/button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="2" />
+        android:text="@string/_2"
+        android:textSize="@dimen/button_text"/>
     <Button
         android:id="@+id/button_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:text="3" />
+        android:text="@string/_3"
+        android:textSize="@dimen/button_text" />
     <Button
         android:id="@+id/button_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:text="4" />
+        android:text="@string/_4"
+        android:textSize="@dimen/button_text" />
     <Button
         android:id="@+id/button_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="5" />
+        android:text="@string/_5"
+        android:textSize="@dimen/button_text" />
+
     <Button
         android:id="@+id/button_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:text="6" />
+        android:text="@string/_6"
+        android:textSize="@dimen/button_text" />
     <Button
         android:id="@+id/button_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="7" />
+        android:text="@string/_7"
+        android:textSize="@dimen/button_text"/>
     <Button
         android:id="@+id/button_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
-        android:text="8" />
+        android:text="@string/_8"
+        android:textSize="@dimen/button_text"/>
     <Button
         android:id="@+id/button_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:text="9" />
+        android:text="@string/_9"
+        android:textSize="@dimen/button_text"/>
 </FrameLayout>
