--- a/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_linear.xml
+++ b/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_linear.xml
@@ -13,21 +13,21 @@
         android:orientation="horizontal">
         <Button
             android:id="@+id/button_1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_1"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_2"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_3"
@@ -39,21 +39,21 @@
         android:orientation="horizontal">
         <Button
             android:id="@+id/button_4"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_4"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_5"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_5"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_6"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_6"
@@ -65,21 +65,21 @@
         android:orientation="horizontal">
         <Button
             android:id="@+id/button_7"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_7"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_8"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_8"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_9"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_9"
@@ -91,14 +91,14 @@
         android:orientation="horizontal">
         <Button
             android:id="@+id/button_0"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/_0"
             android:textSize="@dimen/button_text" />
         <Button
             android:id="@+id/button_point"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/_point"
