--- a/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_constraint.xml
+++ b/Lesson-2/DigitalKeyboard/app/src/main/res/layout/activity_main_constraint.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +7,10 @@
         android:id="@+id/button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_1"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toTopOf="@+id/button_4"
@@ -21,30 +24,42 @@
         android:id="@+id/button_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_2"
         android:textSize="@dimen/button_text"
-        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintBottom_toTopOf="@+id/button_5"
         app:layout_constraintEnd_toStartOf="@+id/button_3"
         app:layout_constraintStart_toEndOf="@+id/button_1"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintVertical_chainStyle="packed" />
     <Button
         android:id="@+id/button_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_3"
         android:textSize="@dimen/button_text"
-        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintBottom_toTopOf="@id/button_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_2"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintVertical_chainStyle="packed" />
     <Button
         android:id="@+id/button_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_4"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toTopOf="@id/button_7"
@@ -56,6 +71,10 @@
         android:id="@+id/button_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_5"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toTopOf="@id/button_8"
@@ -66,6 +85,10 @@
         android:id="@+id/button_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_6"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toTopOf="@id/button_9"
@@ -76,6 +99,10 @@
         android:id="@+id/button_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_7"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,6 +114,10 @@
         android:id="@+id/button_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_8"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,6 +128,10 @@
         android:id="@+id/button_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/_9"
         android:textSize="@dimen/button_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -107,18 +142,22 @@
         android:id="@+id/button_0"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/_0"
         android:textSize="@dimen/button_text"
-        app:layout_constraintTop_toBottomOf="@+id/button_8"
+        app:layout_constraintEnd_toStartOf="@+id/button_point"
         app:layout_constraintStart_toStartOf="@+id/button_7"
-        app:layout_constraintEnd_toStartOf="@+id/button_point" />
+        app:layout_constraintTop_toBottomOf="@+id/button_8" />
     <Button
         android:id="@+id/button_point"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/_point"
         android:textSize="@dimen/button_text"
-        app:layout_constraintTop_toBottomOf="@+id/button_9"
+        app:layout_constraintEnd_toEndOf="@id/button_9"
         app:layout_constraintStart_toEndOf="@+id/button_0"
-        app:layout_constraintEnd_toEndOf="@id/button_9" />
+        app:layout_constraintTop_toBottomOf="@+id/button_9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
