--- a/Lesson-2/Scrolling/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-2/Scrolling/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/android_icon" />
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="160sp"
+                    android:fillViewport="true">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+                                <TextView
+                                    android:id="@+id/textView1"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Текст 1"
+                                    android:textSize="80sp" />
+                                <TextView
+                                    android:id="@+id/textView2"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Текст 2"
+                                    android:textSize="80sp" />
+                                <TextView
+                                    android:id="@+id/textView3"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Текст 3"
+                                    android:textSize="80sp" />
+                                <TextView
+                                    android:id="@+id/textView4"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:text="Текст 4"
+                                    android:textSize="80sp" />
+                        </LinearLayout>
+                </androidx.core.widget.NestedScrollView>
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
