Scrolling: Изменение оттенка

--- a/Lesson-2/Scrolling/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-2/Scrolling/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
                     android:id="@+id/imageView1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:tint="@color/colorAccent"
+                    android:tintMode="screen"
                     app:srcCompat="@drawable/android_icon" />
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
