--- a/Lesson-3/LifeCycleActivity/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-3/LifeCycleActivity/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/demo_life_cycle"
+        app:layout_constraintVertical_bias="0.3"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
