--- a/Lesson-3/ActivityState/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-3/ActivityState/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,23 @@
             android:text="@string/_0"
             android:textSize="@dimen/textCounter" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/counter_2" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/_0"
+            android:textSize="@dimen/textCounter" />
+    </LinearLayout>
 </LinearLayout>
