--- a/Lesson-4/Resources/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-4/Resources/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/textVScrenFormat"
+                android:id="@+id/textVScreenFormat"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -115,6 +115,15 @@
                 android:layout_weight="1"
                 android:text="@string/version"
                 android:textSize="@dimen/textSize" />
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </TableRow>
     </TableLayout>
 </FrameLayout>
