--- a/Lesson-4/Resources/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-4/Resources/app/src/main/res/layout/activity_main.xml
@@ -125,5 +125,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <include
+                layout="@layout/android_versions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </TableRow>
     </TableLayout>
 </FrameLayout>
