--- a/Lesson-4/Login/app/src/main/res/values/styles.xml
+++ b/Lesson-4/Login/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="MyCoolStyle">
+    <style name="MyCoolStyle" parent="AppTheme">
         <item name="android:textSize">@dimen/textSize</item>
         <item name="android:textColor">@color/design_default_color_primary</item>
         <item name="android:layout_marginStart">@dimen/margin</item>
