--- a/Lesson-4/Login/app/src/main/res/layout/activity_main.xml
+++ b/Lesson-4/Login/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
         android:id="@+id/loginName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputLoginName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/loginName"
@@ -26,11 +28,13 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
