--- a/Lesson-6/CityHeraldry/app/src/main/res/values/arrays.xml
+++ b/Lesson-6/CityHeraldry/app/src/main/res/values/arrays.xml
@@ -7,4 +7,12 @@
         <item>Новосибирск</item>
         <item>Самара</item>
     </string-array>
+
+    <integer-array name="coat_of_arms_imgs">
+        <item>@drawable/msc</item><!-- герб Москвы -->
+        <item>@drawable/spb</item><!-- герб Санкт-Петербурга -->
+        <item>@drawable/ebrg</item><!-- герб Екатеринбурга -->
+        <item>@drawable/nsk</item><!-- герб Новосибирска -->
+        <item>@drawable/sam</item><!-- герб Самары -->
+    </integer-array>
 </resources>
