CityHeraldry: Передача сложного объекта во фрагмент

--- a/Lesson-6/CityHeraldry/app/src/main/res/layout/fragment_coat_of_arms.xml
+++ b/Lesson-6/CityHeraldry/app/src/main/res/layout/fragment_coat_of_arms.xml
@@ -6,6 +6,13 @@
     android:orientation="vertical"
     tools:context=".CoatOfArmsFragment">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:text="TextView" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/coat_of_arms"
         android:layout_width="match_parent"
