--- a/Lesson-7/FragmentNavigation/app/src/main/res/values/colors.xml
+++ b/Lesson-7/FragmentNavigation/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="main_text_color">#651FFF</color>
+    <color name="favorite_text_color">#F50057</color>
 </resources>
